[gd_scene load_steps=66 format=3]

[ext_resource type="Script" path="res://Script/Hero/RoleBullet_1.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dyy16mhpvcbho" path="res://Art/HeroPicture/Role2/Role2Bullet.png" id="2"]
[ext_resource type="Texture2D" uid="uid://qknayflolqtp" path="res://Art/HeroPicture/Role1SpecialEffect/Role1HYJJ.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dj582j18kjxo" path="res://Art/Monster/Monster_19/Skill_1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cyhsdc1vyve8j" path="res://Art/HeroPicture/Role1SpecialEffect/qserz.png" id="5"]

[sub_resource type="CircleShape2D" id="1"]
radius = 70.859
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "2" )
region = Rect2(0, 0, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "2" )
region = Rect2(1080, 150, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "2" )
region = Rect2(1080, 250, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "2" )
region = Rect2(0, 300, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "2" )
region = Rect2(540, 300, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "2" )
region = Rect2(1080, 300, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "2" )
region = Rect2(0, 350, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "2" )
region = Rect2(540, 350, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "2" )
region = Rect2(1080, 350, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "2" )
region = Rect2(540, 0, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "2" )
region = Rect2(1080, 0, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "2" )
region = Rect2(0, 50, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "2" )
region = Rect2(540, 50, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "2" )
region = Rect2(1080, 50, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "2" )
region = Rect2(0, 100, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "2" )
region = Rect2(540, 100, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "2" )
region = Rect2(1080, 100, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "2" )
region = Rect2(0, 150, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "2" )
region = Rect2(540, 150, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "2" )
region = Rect2(0, 200, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "2" )
region = Rect2(540, 200, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "2" )
region = Rect2(1080, 200, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "2" )
region = Rect2(0, 250, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "2" )
region = Rect2(540, 250, 540, 50)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "3" )
region = Rect2(192, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "3" )
region = Rect2(384, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "3" )
region = Rect2(576, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource( "3" )
region = Rect2(768, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource( "3" )
region = Rect2(0, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource( "3" )
region = Rect2(192, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource( "3" )
region = Rect2(384, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource( "3" )
region = Rect2(576, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource( "3" )
region = Rect2(768, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource( "3" )
region = Rect2(0, 384, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource( "3" )
region = Rect2(192, 384, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource( "3" )
region = Rect2(384, 384, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource( "3" )
region = Rect2(576, 384, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource( "3" )
region = Rect2(768, 384, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource( "4" )
region = Rect2(0, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource( "4" )
region = Rect2(192, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource( "4" )
region = Rect2(384, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource( "4" )
region = Rect2(576, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource( "4" )
region = Rect2(768, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource( "4" )
region = Rect2(0, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource( "4" )
region = Rect2(192, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource( "5" )
region = Rect2(192, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource( "5" )
region = Rect2(384, 0, 192, 192)
script = null

[sub_resource type="SpriteFrames" id="51"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}],
"loop": false,
"name": &"Role2Bullet1",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}, {
"duration": 1.0,
"texture": SubResource( "30" )
}, {
"duration": 1.0,
"texture": SubResource( "31" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "33" )
}, {
"duration": 1.0,
"texture": SubResource( "34" )
}, {
"duration": 1.0,
"texture": SubResource( "35" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "37" )
}, {
"duration": 1.0,
"texture": SubResource( "38" )
}, {
"duration": 1.0,
"texture": SubResource( "39" )
}, {
"duration": 1.0,
"texture": SubResource( "40" )
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"hyjj",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "41" )
}, {
"duration": 1.0,
"texture": SubResource( "42" )
}, {
"duration": 1.0,
"texture": SubResource( "43" )
}, {
"duration": 1.0,
"texture": SubResource( "44" )
}, {
"duration": 1.0,
"texture": SubResource( "45" )
}, {
"duration": 1.0,
"texture": SubResource( "46" )
}, {
"duration": 1.0,
"texture": SubResource( "47" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"qsez",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "48" )
}, {
"duration": 1.0,
"texture": SubResource( "48" )
}, {
"duration": 1.0,
"texture": SubResource( "49" )
}, {
"duration": 1.0,
"texture": SubResource( "49" )
}, {
"duration": 1.0,
"texture": SubResource( "50" )
}, {
"duration": 1.0,
"texture": SubResource( "50" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"qsez_1",
"speed": 25.0
}]
script = null

[sub_resource type="Animation" id="52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="Animation" id="53"]
length = 0.96
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Role2Bullet1"]
}
script = null

[sub_resource type="Animation" id="54"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["empty"]
}
script = null

[sub_resource type="Animation" id="55"]
length = 0.64
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hyjj"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletAN:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BulletAN:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "1" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BulletPlayer:speed_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
script = null

[sub_resource type="CircleShape2D" id="56"]
radius = 59.0
script = null

[sub_resource type="Animation" id="57"]
length = 0.36
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["qsez"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "56" )]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BulletAN:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BulletAN:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
script = null

[sub_resource type="CircleShape2D" id="58"]
radius = 72.2357
script = null

[sub_resource type="Animation" id="59"]
length = 0.32
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletAN:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletAN:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["qsez_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletAN:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BulletAN:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "58" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HitBox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
script = null

[sub_resource type="AnimationLibrary" id="60"]
_data = {
"RESET": SubResource( "52" ),
"Role2Bullet1": SubResource( "53" ),
"empty": SubResource( "54" ),
"hyjj": SubResource( "55" ),
"qsez": SubResource( "57" ),
"qsez_1": SubResource( "59" )
}
script = null

[node name="RoleBullet_1" type="Area2D"]
collision_layer = 2
collision_mask = 2048
script = ExtResource( "1" )

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( "1" )
disabled = true

[node name="BulletAN" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource( "51" )
animation = &"empty"

[node name="BulletPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "60" )
}

[connection signal="area_entered" from="." to="." method="_on_area_entered" flags=18]
